2002-10-01  Itamar Shtull-Trauring  <itamarst@twistedmatrix.com>

	* twisted/protocols/http.py: Fixed many bugs in protocol parsing,
	found by new unit tests.

2002-9-30  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/protocols/sux.py twisted/web/microdom.py: Made is possible
	to sanely handle parse errors

2002-09-26  Kevin Turner  <acapnotic@twistedmatrix.com>

	* twisted/internet/app.py (_AbstractServiceCollection.removeService):
	(MultiService.removeService): inverse of addService
	(ApplicationService.disownServiceParent): inverse of setServiceParent

2002-9-27  Moshe Zadka <moshez@twistedmatrix.com>

	* .: Releasing 0.99.2

2002-09-26  Glyph Lefkowitz  <glyph@twistedmatrix.com>

	* twisted/web/microdom.py: Better string formatting of XML
	elements is now available, to aid with debugging of web.woven
	(among other applications).

2002-09-25  Kevin Turner  <acapnotic@twistedmatrix.com>

	* twisted/tap/manhole.py: mktap manhole will now prompt for a
	password or accept one from stdin if one is not provided on the
	command line.

2002-09-25  Itamar Shtull-Trauring  <itamarst@twistedmatrix.com>

	* bin/tapconvert: made sure tapconvert program gets installed.

2002-09-24  Kevin Turner  <acapnotic@twistedmatrix.com>

	* twisted/web/resource.py (Resource.wasModifiedSince): revoked,
	not adding this after all.  Instead,

	* twisted/protocols/http.py (Request.setLastModified)
	(Request.setETag): these methods to set cache validation headers
	for the request will return http.CACHED if the request is
	conditional and this setting causes the condition to fail.

2002-9-24  Moshe Zadka <moshez@twistedmatrix.com>

	* .: Releasing 0.99.2rc2

2002-9-23  Donovan Preston <dp@twistedmatrix.com>

	* Renaming domtemplate/domwidgets/dominput/wmvc to Woven
	Woven - The Web Object Visualization Environment

	* Created package twisted/web/woven

	* Renamed domtemplate to template, domwidgets to widgets,
	and dominput to input
