@@ -17,7 +17,8 @@ be a little more quiet
 Run profiler
 .TP
 \fB\-b\fR, \fB\--debug\fR 
-Run the application in the Python Debugger. (implies nodaemon)
+Run the application in the Python Debugger (implies nodaemon option).
+Sending a SIGINT signal to the process will drop it into the debugger.
 .TP
 \fB\-o\fR, \fB\--no_save\fR 
 Do not save shutdown state
